<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.task.internship.myapplication.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/action_bar"
        android:elevation="2dp"
        android:theme="@style/ToolbarColoredBackArrow"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/public_utilities_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_utilities"

                android:textColor="@android:color/black"
                android:textSize="@dimen/big_letters"/>

            <TextView
                android:id="@+id/in_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/shape_orange"
                android:paddingBottom="3dp"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingTop="3dp"
                android:text="@string/text_in_progress"
                android:textColor="@android:color/white"/>

            <View
                style="@style/lineStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/created_text"
                    style="@style/leftTextStyle"
                    android:text="@string/text_created"/>

                <TextView
                    android:id="@+id/date_created_text"
                    style="@style/rightTextStyle"
                    android:text="@string/text_date_created"/>

            </RelativeLayout>

            <View
                style="@style/lineStyle"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/registered_text"
                    style="@style/leftTextStyle"
                    android:text="@string/text_registered"/>

                <TextView
                    android:id="@+id/date_registered_text"
                    style="@style/rightTextStyle"
                    android:text="@string/text_date_registered"/>

            </RelativeLayout>

            <View
                style="@style/lineStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/solve_text"
                    style="@style/leftTextStyle"
                    android:text="@string/text_solve"/>

                <TextView
                    android:id="@+id/date_solve_text"
                    style="@style/rightTextStyle"
                    android:text="@string/text_date_solve"/>

            </RelativeLayout>

            <View
                style="@style/lineStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/responsible_text"
                    style="@style/leftTextStyle"
                    android:text="@string/text_responsible"/>

                <TextView
                    android:id="@+id/tatooine_responsible_text"
                    style="@style/rightTextStyle"
                    android:text="@string/text_tatooine_mvk">
                </TextView>

            </RelativeLayout>

            <View
                style="@style/lineStyle"/>

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_description"
                android:textColor="@android:color/black"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/image_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_view_height"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
